Adição de pequenos detalhes decorativos

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,17 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <link
+      href="//db.onlinewebfonts.com/c/f4d1593471d222ddebd973210265762a?family=Pokemon"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      rel="shortcut icon"
+      href="./images/pokeball.svg"
+      type="image/x-icon"
+    />
+    <title>Pokédex</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
